[gd_scene load_steps=25 format=3 uid="uid://cc338i60editu"]

[ext_resource type="PackedScene" uid="uid://cvcyou122pw7h" path="res://Scenes/fader.tscn" id="1_o1xk2"]
[ext_resource type="Script" path="res://Scripts/KaiUI.gd" id="1_trsck"]
[ext_resource type="PackedScene" uid="uid://c8l4cy8g8votk" path="res://Scenes/WeatherControl.tscn" id="3_6rqrq"]
[ext_resource type="Texture2D" uid="uid://b3mbwkpmg8ycu" path="res://Assets/Textures/Player/HealthBarTop.png" id="4_qo76u"]
[ext_resource type="Texture2D" uid="uid://cmhbro3us7ukd" path="res://Assets/Textures/Player/HealthBarBottom.png" id="5_mps04"]
[ext_resource type="Script" path="res://Scripts/MachinePartsUI.gd" id="7_jj25h"]
[ext_resource type="Script" path="res://Scripts/TempUI.gd" id="7_s8lrs"]
[ext_resource type="FontFile" uid="uid://yd45jxoj3doe" path="res://Assets/Fonts/Windswept.ttf" id="8_egkwl"]
[ext_resource type="Script" path="res://Scripts/Main.gd" id="9_tce0e"]
[ext_resource type="Script" path="res://Scripts/CheckpointUI.gd" id="10_5400q"]
[ext_resource type="Script" path="res://Scripts/keybindLoader.gd" id="10_k55li"]
[ext_resource type="Script" path="res://Scripts/SanstormUI.gd" id="11_bchxt"]
[ext_resource type="Script" path="res://Scripts/keybindUIButtonHandler.gd" id="11_ileum"]
[ext_resource type="Script" path="res://Scripts/DeathScreen.gd" id="11_jopgn"]
[ext_resource type="Texture2D" uid="uid://c6mfnmj34l6k0" path="res://Assets/Textures/SandOUter.png" id="12_igf2u"]
[ext_resource type="Script" path="res://Scripts/cancelButtonHandler.gd" id="12_ju0bm"]
[ext_resource type="Texture2D" uid="uid://j56uvsawdblh" path="res://Assets/Textures/Sandstorm.png" id="13_pi55h"]
[ext_resource type="Script" path="res://Scripts/Camera2D.gd" id="13_uimac"]
[ext_resource type="Script" path="res://Scripts/UIgenerator.gd" id="14_xgfq8"]
[ext_resource type="Script" path="res://Scripts/unpauseHandler.gd" id="15_r2oti"]
[ext_resource type="PackedScene" uid="uid://d16tp5irv6eiy" path="res://fake_ticker.tscn" id="23_mnfnp"]
[ext_resource type="Script" path="res://Scripts/BottomBarrierDeath.gd" id="26_b56ym"]

[sub_resource type="Gradient" id="Gradient_nj6uo"]
offsets = PackedFloat32Array(0, 0.388889, 0.597222, 1)
colors = PackedColorArray(0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_an4fa"]
size = Vector2(20626, 111.25)

[node name="NecessaryStuff" type="Node2D"]

[node name="KaiUI" type="CanvasLayer" parent="."]
script = ExtResource("1_trsck")

[node name="ColorRect" type="ColorRect" parent="KaiUI"]
offset_right = 1152.0
offset_bottom = 121.0
color = Color(0.313726, 0.313726, 0.313726, 0.52549)
metadata/_edit_use_anchors_ = true

[node name="HealthBar" type="Node2D" parent="KaiUI"]
position = Vector2(81, 11)
metadata/_edit_lock_ = true

[node name="Bar" type="TextureProgressBar" parent="KaiUI/HealthBar"]
texture_filter = 1
offset_left = -64.0
offset_top = 43.0
offset_right = 117.0
offset_bottom = 83.0
value = 100.0
texture_over = ExtResource("4_qo76u")
texture_progress = ExtResource("5_mps04")
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="RichTextLabel" type="RichTextLabel" parent="KaiUI/HealthBar"]
offset_left = -83.0
offset_top = -3.0
offset_right = 112.0
offset_bottom = 44.0
theme_override_fonts/normal_font = ExtResource("8_egkwl")
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "[center]Health:[/center]"
metadata/_edit_lock_ = true

[node name="Temperature" type="Node2D" parent="KaiUI"]
position = Vector2(306, -1)
script = ExtResource("7_s8lrs")
gradientResource = SubResource("Gradient_nj6uo")
metadata/_edit_lock_ = true

[node name="TempLabel" type="RichTextLabel" parent="KaiUI/Temperature"]
offset_left = -127.0
offset_top = 8.0
offset_right = 96.0
offset_bottom = 46.0
theme_override_fonts/normal_font = ExtResource("8_egkwl")
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "[center]Temperature:[/center]"
scroll_active = false
metadata/_edit_lock_ = true

[node name="TempGauge" type="RichTextLabel" parent="KaiUI/Temperature"]
offset_left = -85.0
offset_top = 46.0
offset_right = 101.0
offset_bottom = 125.0
theme_override_fonts/normal_font = ExtResource("8_egkwl")
theme_override_font_sizes/normal_font_size = 55
text = "100. T "
scroll_active = false
metadata/_edit_lock_ = true

[node name="MachineParts" type="Node2D" parent="KaiUI"]
position = Vector2(875, 24)
script = ExtResource("7_jj25h")
metadata/_edit_lock_ = true

[node name="RichTextLabel" type="RichTextLabel" parent="KaiUI/MachineParts"]
offset_left = -204.0
offset_top = 9.0
offset_right = 272.0
offset_bottom = 145.0
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_fonts/normal_font = ExtResource("8_egkwl")
theme_override_fonts/bold_font = ExtResource("8_egkwl")
theme_override_font_sizes/normal_font_size = 50
theme_override_font_sizes/bold_font_size = 60
bbcode_enabled = true
text = "[center]Machine Parts: [b]0/7[/b][/center]"
metadata/_edit_lock_ = true

[node name="Sandstorm" type="Node2D" parent="KaiUI"]
position = Vector2(483, 36)
script = ExtResource("11_bchxt")
metadata/_edit_lock_ = true

[node name="TextureProgressBar" type="TextureProgressBar" parent="KaiUI/Sandstorm"]
offset_top = 9.0
offset_right = 85.0
offset_bottom = 92.0
value = 100.0
fill_mode = 3
texture_over = ExtResource("12_igf2u")
texture_progress = ExtResource("13_pi55h")
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="RichTextLabel" type="RichTextLabel" parent="KaiUI/Sandstorm"]
offset_left = -67.0
offset_top = -27.0
offset_right = 128.0
offset_bottom = 20.0
theme_override_fonts/normal_font = ExtResource("8_egkwl")
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "[center]Sandstorm:[/center]"
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="Checkpoint" type="Node2D" parent="KaiUI"]
script = ExtResource("10_5400q")
metadata/_edit_lock_ = true

[node name="RichTextLabel" type="RichTextLabel" parent="KaiUI/Checkpoint"]
offset_left = 18.0
offset_top = 597.0
offset_right = 306.0
offset_bottom = 634.0
theme_override_fonts/normal_font = ExtResource("8_egkwl")
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "Checkpoint Reached"
scroll_active = false

[node name="DeathScreen" type="CanvasLayer" parent="."]
script = ExtResource("11_jopgn")

[node name="Container" type="Node2D" parent="DeathScreen"]

[node name="Front" type="ColorRect" parent="DeathScreen/Container"]
offset_left = 82.0
offset_top = 124.0
offset_right = 1108.0
offset_bottom = 326.0
color = Color(0.615686, 0.509804, 0.341176, 0.921569)

[node name="Back" type="ColorRect" parent="DeathScreen/Container"]
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.615686, 0.509804, 0.341176, 0.364706)
metadata/_edit_lock_ = true

[node name="RichTextLabel" type="RichTextLabel" parent="DeathScreen/Container"]
offset_top = 125.0
offset_right = 1152.0
offset_bottom = 352.0
theme_override_colors/default_color = Color(0.501961, 0.219608, 0.176471, 1)
theme_override_fonts/normal_font = ExtResource("8_egkwl")
theme_override_font_sizes/normal_font_size = 200
bbcode_enabled = true
text = "[center]YOU DIED[/center]"

[node name="PlayAgain" type="Button" parent="DeathScreen/Container"]
offset_left = 227.0
offset_top = 459.0
offset_right = 508.0
offset_bottom = 562.0
theme_override_fonts/font = ExtResource("8_egkwl")
theme_override_font_sizes/font_size = 50
text = "Respawn"

[node name="Quit" type="Button" parent="DeathScreen/Container"]
offset_left = 615.0
offset_top = 460.0
offset_right = 895.0
offset_bottom = 562.0
theme_override_fonts/font = ExtResource("8_egkwl")
theme_override_font_sizes/font_size = 50
text = "Quit"

[node name="Fader" parent="." instance=ExtResource("1_o1xk2")]
position = Vector2(44, 37)
fade_in_time = 5.0

[node name="WeatherControl" parent="." instance=ExtResource("3_6rqrq")]
sandstorm_is_on = false

[node name="UI" type="CanvasLayer" parent="."]

[node name="PauseScreen" type="Node2D" parent="UI"]
process_mode = 3
visible = false
z_index = 12
position = Vector2(-87, 103)

[node name="ColorRect" type="ColorRect" parent="UI/PauseScreen"]
process_mode = 3
visibility_layer = 512
z_index = 38
offset_left = -1959.0
offset_top = -717.0
offset_right = 2751.0
offset_bottom = 913.0
color = Color(0.223529, 0.223529, 0.223529, 0.968627)
script = ExtResource("15_r2oti")

[node name="Button" type="ColorRect" parent="UI/PauseScreen"]
z_index = 4096
offset_left = -207.0
offset_top = -490.0
offset_right = 72.0
offset_bottom = -434.0
color = Color(0.0862745, 0.0862745, 0.0862745, 1)

[node name="RichTextLabel" type="RichTextLabel" parent="UI/PauseScreen/Button"]
layout_mode = 0
offset_left = 70.0
offset_right = 270.0
offset_bottom = 55.0
theme_override_font_sizes/normal_font_size = 30
text = "Controls"

[node name="Button2" type="ColorRect" parent="UI/PauseScreen"]
z_index = 40
offset_left = -207.0
offset_top = -395.0
offset_right = 75.0
offset_bottom = -342.0
color = Color(0.0862745, 0.0862745, 0.0862745, 1)

[node name="RichTextLabel" type="RichTextLabel" parent="UI/PauseScreen/Button2"]
layout_mode = 0
offset_left = 57.0
offset_top = 5.0
offset_right = 291.0
offset_bottom = 56.0
theme_override_font_sizes/normal_font_size = 30
text = "Back to Menu"

[node name="tileTemplateHoverSensor" type="TextureButton" parent="."]
visible = false
z_index = 16
offset_left = -262.0
offset_top = -175.0
offset_right = -192.0
offset_bottom = -105.0
script = ExtResource("9_tce0e")
metadata/tileName = "itemTileTemplate"

[node name="keybindHandler" type="Node" parent="."]
script = ExtResource("10_k55li")

[node name="Templates" type="Node" parent="."]

[node name="keybindButton" type="ColorRect" parent="Templates"]
z_index = 4096
offset_left = -94.0
offset_top = -355.0
offset_right = -15.0
offset_bottom = -331.0
color = Color(0.0862745, 0.0862745, 0.0862745, 1)
script = ExtResource("11_ileum")
metadata/action = &""
metadata/_edit_use_anchors_ = true

[node name="RichTextLabel" type="RichTextLabel" parent="Templates/keybindButton"]
layout_mode = 0
offset_left = 4.0
offset_top = 2.0
offset_right = 222.0
offset_bottom = 53.0
theme_override_font_sizes/normal_font_size = 13
text = "controls"
metadata/_edit_use_anchors_ = true

[node name="cancelButton" type="ColorRect" parent="Templates"]
z_index = 4096
offset_left = -94.0
offset_top = -355.0
offset_right = -15.0
offset_bottom = -331.0
color = Color(0.0862745, 0.0862745, 0.0862745, 1)
script = ExtResource("12_ju0bm")
metadata/action = &""
metadata/_edit_use_anchors_ = true

[node name="RichTextLabel" type="RichTextLabel" parent="Templates/cancelButton"]
layout_mode = 0
offset_left = 4.0
offset_top = 2.0
offset_right = 222.0
offset_bottom = 53.0
theme_override_font_sizes/normal_font_size = 13
text = "controls"
metadata/_edit_use_anchors_ = true

[node name="fakeTicker" parent="Templates" instance=ExtResource("23_mnfnp")]
offset_left = -70.0
offset_top = -40.0
offset_right = -6.0
offset_bottom = -6.0

[node name="Camera2D" type="Camera2D" parent="."]
process_mode = 3
position = Vector2(375, 374)
zoom = Vector2(1.2, 1.2)
position_smoothing_speed = 0.0
script = ExtResource("13_uimac")

[node name="WorldBarrier" type="Area2D" parent="."]
position = Vector2(-91, -211)
script = ExtResource("26_b56ym")

[node name="Left" type="CollisionShape2D" parent="WorldBarrier"]
position = Vector2(-3327, 601)
rotation = 1.5708
shape = SubResource("RectangleShape2D_an4fa")

[node name="Right" type="CollisionShape2D" parent="WorldBarrier"]
position = Vector2(5562, 488)
rotation = 1.5708
shape = SubResource("RectangleShape2D_an4fa")

[node name="Top" type="CollisionShape2D" parent="WorldBarrier"]
position = Vector2(276, -333)
shape = SubResource("RectangleShape2D_an4fa")

[node name="Bottom" type="CollisionShape2D" parent="WorldBarrier"]
position = Vector2(276, 1678.38)
shape = SubResource("RectangleShape2D_an4fa")

[node name="CanvasModulate" type="CanvasModulate" parent="."]
position = Vector2(86, -31)
color = Color(0.533333, 0.521569, 0.666667, 1)

[node name="proFix" type="CanvasLayer" parent="."]

[node name="uiContainer" type="Node2D" parent="proFix"]
process_mode = 3
visible = false
z_index = 60
position = Vector2(-587, -317)

[node name="ColorRect" type="ColorRect" parent="proFix/uiContainer"]
z_index = -2
offset_left = -2570.0
offset_top = -1469.0
offset_right = 3826.0
offset_bottom = 1699.0
color = Color(0.14902, 0.14902, 0.14902, 1)

[node name="Control" type="Control" parent="proFix/uiContainer"]
custom_minimum_size = Vector2(100, 10)
layout_mode = 3
anchors_preset = 0
offset_left = 472.0
offset_top = 136.0
offset_right = 572.0
offset_bottom = 236.0
script = ExtResource("14_xgfq8")

[node name="ColorRect2" type="ColorRect" parent="proFix/uiContainer"]
z_index = 4095
offset_left = 648.0
offset_top = 867.0
offset_right = 1806.0
offset_bottom = 1067.0
color = Color(0.14902, 0.14902, 0.14902, 1)

[node name="Label" type="Label" parent="proFix/uiContainer/ColorRect2"]
z_index = 4096
layout_mode = 0
offset_left = 13.0
offset_top = 3.0
offset_right = 1159.0
offset_bottom = 56.0
text = "press button to change keybind, use ticker to cycle between alternate keybinds"

[node name="stupidScrollbarBullshitWhyDOesGodotNeedToBeLikeThis" type="CanvasLayer" parent="."]
